# cocogitto-bot

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PRIVACY_POLICY.md  README.md  Rocket.toml  build.rs  cog.toml  config.example.toml  config.toml  justfile
.github/workflows/: CI.yml  Release.yaml
cocogitto-bot-helm-chart/: Chart.yaml  values.yaml
cocogitto-bot-helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
cocogitto-bot-helm-chart/templates/tests/: test-connection.yaml
src/: authenticate.rs  comment.rs  commit_event.rs  error.rs  event_guard.rs  main.rs  settings.rs
src/cog/: commit.rs  mod.rs  report.rs
src/gh/: authenticate.rs  check_run.rs  commits.rs  event.rs  mod.rs
src/model/: commit_event.rs  installation.rs  installation_token.rs  mod.rs  pull_request_event.rs  report.rs  repository.rs
src/model/github_event/: mod.rs  pull_request_event.rs
src/octo/: authenticate.rs  check_run.rs  commits.rs  mod.rs
