[package]
name = "cocogitto_github_app"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cocogitto/cocogitto-bot"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
keywords = ["ci", "git", "github-actions", "conventional-commit"]
description = """
A pedantic conventional commit github bot powered by Cocogitto
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
cocogitto = { git = "https://github.com/cocogitto/cocogitto", default-features =  false, features = [] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
octocrab = "0.28.0"
async-trait = "0.1.51"
indoc = "2.0.3"
anyhow = "1.0.47"
jsonwebtoken = "8"

[dev-dependencies]
tokio-test = "0.4.2"
