[package]
name = "cocogitto_github_app"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cocogitto/cocogitto-bot"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
keywords = ["ci", "git", "github-actions", "conventional-commit"]
description = """
A pedantic conventional commit github bot powered by Cocogitto
"""

[dependencies]
cocogitto = { version = "5.6.0", default-features = false, features = [] }
octocrab = { git = "https://github.com/cocogitto/octocrab", branch = "main" }
indoc = "2.0.3"
jsonwebtoken = "9.1.0"
anyhow = "1.0.47"

axum = { version = "0.6.20", features = ["json"] }
axum-macros = "0.3.7"
autometrics = { version = "0.6.0", features = ["prometheus-exporter"] }

tower-http = { version = "0.4.4", features = ["trace"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
async-trait = "0.1.72"

[build-dependencies]
vergen = { version = "8.1", features = ["git", "gitcl"] }

[dev-dependencies]
tokio-test = "0.4.2"
indoc = "2.0.4"
